fixing typing indicator spacing and text
(cherry picked from commit 2886e8ef2127861f3db7d85b0aadc529b44a6f63)

--- a/src/styles.css
+++ b/src/styles.css
@@ -215,11 +215,16 @@
     background-color: var(--color-bg-secondary);
   }
   .chat-typing-indicator {
-    @apply h-6 px-2 pt-2;
+    @apply h-8 px-2 pt-1 pb-1;
   }
   .typing-indicator {
     @apply px-4 py-2 text-xs italic;
     color: var(--color-text-tertiary);
+  }
+  @media (prefers-color-scheme: dark) {
+    .typing-indicator {
+      color: white;
+    }
   }
   .chat-input-wrapper {
     @apply px-2 mt-auto mb-2;
